Fixed Product Page 1

--- a/cart_page.html
+++ b/cart_page.html
@@ -77,7 +77,7 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" min="1">
+          <input class="product-quantity-box" type="number" value="1" min="1">
           <p class="total-price">$17.00</p>
 
           <div class="cart-info cart-info-grid">
