--- a/product_page_lip.html
+++ b/product_page_lip.html
@@ -30,51 +30,47 @@
       </nav>
     </header>
 
-    <section class="element-main">
+    <section class="about-section element-tertiary">
+      <figure>
+        <img class="img-product-single about-img" src="img/essential-drip-lip-oil.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> 
+      </figure>
 
-      <div class="product-information">
-        <div class="product-image">
-          <a href="product_page_lip.html"> 
-            <img class="img-product-single" src="img/essential-drip-lip-oil.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> 
-          </a>
-        </div>
-
-        <div class="product-details">
-          <h5>Moonlight Sunrise</h5>
-          <h3>Essential Drip Lip Oil</h3>
-            <div class="product-shade-container">
-              <div class="product-shade-crop">
-                <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
-              </div>
-              <div class="product-shade-crop">
-                <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink">
-              </div>
-              <div class="product-shade-crop">
-                <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Green">
-              </div>
-              <div class="product-shade-crop">
-                <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Lustrous Liquid Eyeshadow Shade Options in Red">
-              </div>
+      <div class="product-details">
+        <h1 class="product-page-color">Moonlight Sunrise</h1>
+        <h2 class="product-page-name">Essential Drip Lip Oil</h2>
+          <div class="product-shade-container">
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
             </div>
-          <p> Shade: Lavander Kiss </p>
-          <div class="item-add">
-            <input class="quantity-box" type="number" value="1" min="1">
-            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink">
+            </div>
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Green">
+            </div>
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Lustrous Liquid Eyeshadow Shade Options in Red">
+            </div>
           </div>
-
-          <hr>
-            <h4>Product Description </h4>
-            <p> Swipe on sheer color, a tantalizing scent & mega glossy shine in no time. our coconut oil-infused bestseller combines the texture of a gloss with the moisturizing benefits of an oil. the cooling metal tip loads up the perfect amount of product—bathing lips in nourishing botanicals and silky-smooth hydration without the stickiness. </p>
-          <hr>
-            <h4> Ingredients</h4>
-            <p> Cocoglycerides, ethylcellulose, caprylic/capric triglyceride, propyl gallate, withania somnifera root extract, flavor (aroma), red 28 lake (ci 45410). </p>
+        <p class="product-desc-body"> Shade: Lavander Kiss </p>
+        <div class="item-add">
+          <input class="quantity-box" type="number" value="1" min="1">
+          <a class="btn btn-secondary product-button" href="cart_page.html">Add to Cart | $17</a>
         </div>
-      </div>
 
-      <section class="product-review-section">
-        <div class="overall-review">
-          <h3> Customer Reviews </h3>
-          <h2> 4.8 </h2>
+        <hr>
+          <h3 class="product-desc-title">Product Description</h3>
+          <p class="about-content"> Swipe on sheer color, a tantalizing scent & mega glossy shine in no time. our coconut oil-infused bestseller combines the texture of a gloss with the moisturizing benefits of an oil. the cooling metal tip loads up the perfect amount of product—bathing lips in nourishing botanicals and silky-smooth hydration without the stickiness. </p>
+        <hr>
+          <h3 class="product-desc-title"> Ingredients</h3>
+          <p class="about-content"> Cocoglycerides, ethylcellulose, caprylic/capric triglyceride, propyl gallate, withania somnifera root extract, flavor (aroma), red 28 lake (ci 45410). </p>
+      </div>
+    </section>
+
+      <section class="element-main product-review-section">
+        <div>
+          <h2> Customer Reviews </h2>
+          <h3 class="product-page-name"> 4.8 </h3>
           <img src="img/reviews-4.8-stars.png" alt="4.8 stars review">
           <a class="btn btn-primary" href="events_page.html">Leave a Review</a>
         </div>
@@ -98,29 +94,95 @@
         </div>
       </section>
 
-    <div class="related-items">
-      <h3> Related Items </h3>
-        <div class="product-reccomendations">
-          <div class="product-reccs">
-            <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
-            <h5> Midnight Shadow </h5>
-            <h4> Essential Drip Lip Oil </h4>
+      <section class="bestseller-section">
+        <div class="element-main">
+          <h2>Similar Products</h3>
+        </div>
+        <div class="product-listing">
+          <div class="product-listing-container">
+            <div class="product-container">
+              <div class="image-container img-crop">
+                <a href="#">
+                  <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss">
+                </a>
+              </div>
+              <h2 class="product-color">Lavender Kiss</h2>
+              <div>
+                <h3 class="product-name">Essential Drip Lip Oil</h3>
+                <div class="product-shade-container">
+                  <div class="product-shade-crop">
+                    <img
+                      class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
+                  </div>
+                  <div class="product-shade-crop">
+                    <img
+                      class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
+                  </div>
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
+                  </div>
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a class="btn-secondary product-button" href="cart_page.html"
+              >Add to Cart $17</a
+            >
           </div>
-
-         <div class="product-reccs">
-            <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
-            <h5> Hypernova</h5>
-            <h4> Satin Matte Blush </h4>
+  
+          <div class="product-listing-container">
+            <div class="product-container">
+              <div class="image-container img-crop">
+                <a href="#">
+                  <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune">
+                </a>
+              </div>
+              <h2 class="product-color">Miss Neptune</h2>
+              <div>
+                <h3 class="product-name">Highlighter Topper</h3>
+                <div class="product-shade-container">
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
+                  </div>
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a class="btn-secondary product-button" href="cart_page.html"> Add to Cart $17 </a>
           </div>
-
-         <div class="product-reccs">
-            <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
-            <h5> On Your Collar </h5>
-            <h4> Plumping Lip Gloss</h4>
+  
+          <div class="product-listing-container">
+            <div class="product-container">
+              <div class="image-container img-crop">
+                <a href="product_page.html">
+                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat">
+                </a>
+              </div>
+              <h2 class="product-color">Lab Coat</h2>
+              <div>
+                <h3 class="product-name">Lustrous Liquid Eyeshadow</h3>
+                <div class="product-shade-container">
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+                  </div>
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+                  </div>
+                  <div class="product-shade-crop">
+                    <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17 </a>
           </div>
         </div>
-    </div>
-  </section>
+      </section>
+  </body>
 
 
 
